Fix article page routing and update 404 page

--- a/netlify.toml
+++ b/netlify.toml
@@ -23,3 +23,10 @@
   from = "/.well-known/assetlinks.json"
   to = "/.well-known/assetlinks.json"
   status = 200
+
+# Handle article pages
+[[redirects]]
+  from = "/article/*"
+  to = "/.netlify/functions/next/article/[id]"
+  status = 200
+  force = true
